--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -110,7 +110,7 @@
               %img{ src: "https://s3-us-west-1.amazonaws.com/moonlite/static/manager.png" }
           %a.carousel-control.left{"data-slide" => "prev", :href => "#screen_carousel"} ‹ 
           %a.carousel-control.right{"data-slide" => "next", :href => "#screen_carousel"} ›
-        .area
+        #prices.area
           %h2{ style: "margin-bottom: 17px;" }  
             Evaluator Pricing 
           .free_trial 
