--- a/app/views/paths/edit.html.haml
+++ b/app/views/paths/edit.html.haml
@@ -37,6 +37,7 @@
         .control-group{ style: "margin-bottom: 10px;" }
           %label.control-label Custom CSS
           .controls{ style: "margin-top: 6px;" }= link_to "Customize Challenge Styles", style_path_path(@path.permalink), style: "line-height:18px; padding-top: 5px;"
+      - if @enable_administration
         .control-group{ style: "margin-bottom: 10px;" }
           %label.control-label Permanently delete Challenge
           .controls{ style: "margin-top: 6px;" }= link_to "Delete", path_url(@path), method: :delete, confirm: "Are you sure you want to delete this Challenge? The Challenge will be removed from all your Evaluations and all candidate information collected with this Challenge will be deleted. This action is irreversible.", style: "line-height:18px; padding-top: 5px;"
@@ -88,15 +89,16 @@
           = image_tag(@path.path_pic, class: "small-header-image")
       %div
         %h1.editable{ style: "margin:0px;", title: "Click to edit" }= @path.name
-      .floatr 
-        - if @path.group_id
+      - if @path.group_id
+        .floatr 
           .controls
             %div{ "data-tip" => "Back" }
               = link_to new_group_evaluation_path(@group) do
                 = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/back.png", class: "gear"
             .edit_path_settings_button{ onclick: "$('#settings_modal').modal({keyboard: true, show: true})", "data-tip" => "Settings" }
               %img.gear{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/gear_dark_small.png", alt: "Challenge Settings"}
-        - else
+      - else
+        %div{ style: "float: right;" }
           - if @path.published? && @path.approved?
             = link_to "View", challenge_path(@path.permalink), class: "button button-actionable"
           - elsif @path.published?
