different support options in modal based on subscription type

--- a/app/views/groups/signup/confirmation.html.haml
+++ b/app/views/groups/signup/confirmation.html.haml
@@ -36,7 +36,7 @@
             %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/challenges_dark.png" }
           .text
             %span Challenges: 
-            If you want to test your candidates on custom content specific to your company, you'll want to start here. After you create a Challenge, you can access it in any Evaluation you set up.
+            If you want to test your candidates on custom content specific to your company, you'll want to start here. After you create a Challenge, you can access it in any Evaluation you create.
             %div{ style: "margin: 15px 10px 20px 0;"}
               = link_to "Create your first custom Challenge", new_group_path_url(@group), class: "submit_button", style: "float: inherit;"
         %li 
