expanding columns on account table

--- a/app/views/custom_styles/_form.html.haml
+++ b/app/views/custom_styles/_form.html.haml
@@ -2,7 +2,7 @@
   = form_for(custom_style, url: link) do |f|
     %p
       Edit the styles below. Note that you must save before these styles will take effect. 
-      Set the status to "Preview" if you want to see how the styles will look. Only you will be able to see them.
+      Set the status to "Preview" if you want to see how the styles will look. In "Preview" mode, only you will be able to see the style changes.
     .control-group
       %label.control-label Status
       .controls
