--- a/app/views/personas/_show.html.haml
+++ b/app/views/personas/_show.html.haml
@@ -39,4 +39,5 @@
         %div 
           = image_tag path.path_pic, class: "mosaic-backdrop", style: "display:inline;", size: "140x140", alt: "#{path.name}"
   %div.explorenewuserfooter
-    = link_to "Back", explore_path, class: "button button-standard back_to_preview_index", remote: true
+    - if false
+      = link_to "Back", explore_path, class: "button button-standard back_to_preview_index", remote: true
