shout out message on home page to get eval take back to take eval

--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -219,7 +219,7 @@ code.content { border: none; color: #404040; display: block; padding: 10px; font
 
 
 /* Profile/Revolution */
-#profile, #challenge{
+#profile, #challenge, #homepage{
   .help_box{
     background-clip: padding-box;
     background-color:#FFF7CD;
