--- a/app/views/group_mailer/invite.haml
+++ b/app/views/group_mailer/invite.haml
@@ -1,4 +1,4 @@
-%p{ style: "font-size:12px;"} Please follow the link below to register with the #{@group.name} account on MetaBright.
+%p{ style: "font-size:12px;"} You've been invited to join the #{@group.name} account on MetaBright. Please follow the link below to register.
 %p{ style: "font-size:12px;"}= link_to @url, @url
 %p{ style: "font-size:12px;"} 
   Thanks,
