--- a/app/views/mailer/_notification_settings.html.haml
+++ b/app/views/mailer/_notification_settings.html.haml
@@ -4,4 +4,10 @@
   %span{style:"font-size:10px;"}
     = link_to "click here.", notification_settings_url(@user.signup_token)
   %span{style:"font-size:10px; color:gray;"} 
-    MetaBright, Inc. 212 Valencia Street, Suite D, San Francisco, CA 94123
+    MetaBright, Inc. 500 Oak Street, Suite 5, San Francisco, CA, 94102
+- else
+  %span{style:"font-size:10px; color:gray;"}
+    You are receiving this message because you've been invited to join MetaBright. 
+  %br
+  %span{style:"font-size:10px; color:gray;"} 
+    MetaBright, Inc. 500 Oak Street, Suite 5, San Francisco, CA, 94102
