--- a/app/views/group_mailer/welcome.html.haml
+++ b/app/views/group_mailer/welcome.html.haml
@@ -6,7 +6,7 @@
   %ul
     %li <strong>Evaluations:</strong> Validate the skills of your job candidates before you spend time interviewing them. You can include up to 5 Challenges in each Evaluation. Each Challenge measures your candidate in a specific skill. #{link_to "Create an Evaluation.", new_group_evaluation_path(@group)}
     %li <strong>Custom Challenges:</strong> If your company requires a specific skill set that MetaBright doesn't offer yet, you can create your own Challenge to measure your candidates. The best part is, MetaBright's organizational and algorithmic capabilities will still be applied to your Challenge! #{link_to "Create a custom Challenge.", new_group_path_url(@group)}
-    %li <strong>The MetaPercentile:</strong> We distill everything about your candidate down to a single, easy to understand figure: the MetaPercentile. This way you can easily compare all your candidates at a glance. The MetaPercentile is instantly available on all MetaBright Challenges, and even on your custom Challenges once you have over 20 participants.
+    %li <strong>The MetaScore:</strong> We distill everything about your candidate down to a single, easy to understand figure: the MetaScore. This way you can easily compare all your candidates at a glance. The MetaScore is instantly available on all MetaBright Challenges, and even on your custom Challenges once you have over 20 participants.
 %p{ style: "font-size: 12px;"}
   If you ever have any questions about MetaBright or your plan, you can reach our support team at #{link_to "support@metabright.com", "mailto:support@metabright.com"}.
 %p{ style: "font-size:12px;"} 
