--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -146,13 +146,12 @@
                       %ul.profile_dropdown{ style: "list-style: none; margin: 0px;"}
                         - if @enable_administration
                           %li= link_to "Admin", admin_overview_path, style: "border-bottom: 1px solid #DDD; color: inherit; text-shadow: none;"
-                        %li.explore_link= link_to "Explore", "#", style: "border-bottom: 1px solid #DDD; color: inherit; text-shadow: none;"
-                        - unless @current_user.employer?
+                        - unless @admin_group
+                          %li.explore_link= link_to "Explore", "#", style: "border-bottom: 1px solid #DDD; color: inherit; text-shadow: none;"
                           %li= link_to "View Profile", user_path(current_user.username), style: "border-bottom: 1px solid #DDD; color: inherit; text-shadow: none;"
-                        - unless @current_user.employer?
                           %li= link_to "Edit Profile", edit_user_path(current_user.username), style: "border-bottom: 1px solid #DDD; color: inherit; text-shadow: none;"
-                        %li.invite_facebook_friends= link_to "Invite Friends", "#", style: "border-bottom: 1px solid #DDD; color: inherit; text-shadow: none;"
-                        %li= link_to "MetaBright Labs", ideas_path, style: "border-bottom: 1px solid #DDD; color: inherit; text-shadow: none;"
+                          %li.invite_facebook_friends= link_to "Invite Friends", "#", style: "border-bottom: 1px solid #DDD; color: inherit; text-shadow: none;"
+                          %li= link_to "MetaBright Labs", ideas_path, style: "border-bottom: 1px solid #DDD; color: inherit; text-shadow: none;"
                         %li= link_to "Sign out", signout_path, style: "color: inherit; text-shadow: none;"
       - if current_user.nil?
         %ul.nav.pull-right
