--- a/app/assets/stylesheets/challenge.css.scss
+++ b/app/assets/stylesheets/challenge.css.scss
@@ -20,7 +20,7 @@
       margin: 0 0 10px 10px;
       text-align: center;
       
-      h4 { text-align: left; }
+      h4 { text-align: left; font-size: 20px; line-height: 25px; }
       a { margin-top:14px; }
       .quizcontainer { margin-top: 20px; text-align: left; }
     }
