--- a/app/views/custom_styles/_form.html.haml
+++ b/app/views/custom_styles/_form.html.haml
@@ -12,6 +12,20 @@
           %option{ value: CustomStyle::ON, selected: ('selected' if custom_style.on?) } On
     %div.field.clearfix
       = f.text_area :styles, rows: "15", placeholder: "Add CSS styles here...", style: "margin:10px 0; width: 860px; min-height: 200px;"
+    %div#editor.ace_editor{ style: "margin:10px 0; width: 860px; min-height: 350px;" }
     %div.actions
       = link_to "Back", back, class: "button button-standard"
       = f.submit "Save", class: "button button-actionable", style: "margin-left: 10px;"
+:css
+  .ace_scroller, .ace_gutter { padding-top: 3px; }
+
+:javascript
+  var editor = ace.edit("editor");
+  editor.setTheme("ace/theme/github");    
+  editor.getSession().setUseSoftTabs(true);
+  editor.getSession().setTabSize(2);
+  var $textarea = $("#custom_style_styles").hide()
+  editor.getSession().setValue($textarea.val());
+  editor.getSession().on('change', function(){
+    $textarea.val(editor.getSession().getValue());
+  });
