--- a/app/views/groups/account.html.haml
+++ b/app/views/groups/account.html.haml
@@ -20,21 +20,8 @@
     setInterval("compare_and_search();", 300);
   });
 
-:css
-  body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
-  .aboutcontainer{ width: 900px; margin-top: -30px; border-radius: 0; }
-  .aboutbox { min-height: 500px; }
-  .aboutbox .header { margin-bottom: 10px;}
-  .aboutbox .header img { height: 72px; margin-top: -15px; }
-  .aboutbox .header h2 { display: inline-block; font-size: 30px; }
-  .aboutbox .header hr { margin: 8px; }
-  .aboutbox .header input { float: right; border-radius: 0; margin: 10px 10px 0 0; padding: 7px 7px; font-size: 17px; }
-  .aboutbox .invite { border-radius: 0; padding: 6px 6px; font-size: 15px; margin: 4px 0 4px -8px; }
-  .documentation { padding: 10px 20px; }
-  .container .body { padding: 0; }
-
-#employer.aboutcontainer
-  .aboutbox
+.employer-container
+  .employer-box
     .header
       %img{ src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", alt: "Stoney"}
       %h2 #{@group.name} Account
