--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -1,10 +1,5 @@
-:css
-  body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
-  .aboutcontainer{ width: 943px; margin-top: -35px;}
-
-
-#employer.aboutcontainer
-  .aboutbox{ style: "padding: 8px; "}
+.employer-container
+  .employer-box{ style: "padding: 8px; "}
     %img{ style:"display:inline; height:115px;", src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", alt: "Stoney"}
     %span{ style: "font-size: 50px;position: relative;top:13px;" } Edit Group
     %hr{style:"margin:0;"}
