--- a/app/views/pages/portal.html.haml
+++ b/app/views/pages/portal.html.haml
@@ -1,7 +1,7 @@
 :css
   body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
 
-#employer.aboutcontainer{ style: "margin-top: 35px; width: 550px;" }
+#employer.employer-container{ style: "margin-top: 85px; width: 550px;" }
   #organization_portal.aboutbox
     .header{ style: "width: 100%; border-bottom: 1px solid #DDD;" }
       = image_tag STONEY_SMALL_URL, style: "height: 72px; display: inline; vertical-align: middle", alt: "Stoney"
